@@ -1,3 +1,8 @@
+2006-01-30  Miklos Szeredi <miklos@szeredi.hu>
+
+	* highlevel-lib: add 'auto_cache' option.  This caches file data
+	based on modification time and size
+
 2006-01-20  Miklos Szeredi <miklos@szeredi.hu>
 
 	* fuse_opt: add new helper constants FUSE_OPT_KEY_KEEP and
